deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-converter
  labels:
    app: temperature-converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temperature-converter
  template:
    metadata:
      labels:
        app: temperature-converter
    spec:
      containers:
      - name: temperature-converter
        image: asia-south1-docker.pkg.dev/project-0d94d8bf-842c-4e18-818/my-jboss-images/temp-con:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 8443
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
      terminationGracePeriodSeconds: 30
